--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="słowa, kluczowe, wypisane, po, porzecinku" />
     <style>
         body {
-            background: linear-gradient(45deg, #ff6f00, #ff8e53);
+            background: linear-gradient(45deg, #ff3f00, #ff8e50);
             font-family: 'Courier New', Courier, monospace;
         }
         h1 {
@@ -21,8 +21,6 @@
             height: auto;
             margin: 5px;
             cursor: pointer;
-            background-color: black;
-            padding: 10px;
         }
         .gallery {
             text-align: center;
@@ -31,9 +29,6 @@
         .large-image-container {
             text-align: center;
             margin-top: 20px;
-            background-color: black;
-            display: inline-block;
-            padding: 10px;
         }
         .large-image {
             display: none;
@@ -52,7 +47,7 @@
     </script>
 </head>
 <body>
-    <h1>🔥 Signuenja rowerowa 🔥</h1>
+    <h1>🔥 Wycieczki rowerowe 🔥</h1>
     <div style="text-align: center; margin-top: 50px;">
         <img src="img/coolbik.png" alt="Steampunk Bicycle Logo" style="width: 300px; height: auto;">
     </div>
@@ -68,4 +63,3 @@
     </div>
 </body>
 </html>
-
